fix: :bug: Fixes the header responsiveness on smaller screens

--- a/style.css
+++ b/style.css
@@ -38,12 +38,6 @@ body {
   flex-direction: row;
 }
 
-@media (max-width: 767px) {
-  .header > .container {
-    flex-direction: column;
-  }
-}
-
 .logo {
   color: #1a1a1a;
   font-family: 'Mina', sans-serif;
@@ -56,16 +50,19 @@ body {
   font-size: 1.25rem;
 }
 
+.burger-menu {
+  display: none;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #4a4a4a;
+}
+
 .nav {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-@media (max-width: 767px) {
-  .nav {
-    margin: 1rem;
-  }
 }
 
 .nav-link {
@@ -98,6 +95,31 @@ body {
   background-color: #e1e1e1;
 }
 
+@media (max-width: 767px) {
+  .burger-menu {
+    display: block;
+  }
+
+  .nav {
+    flex-direction: column;
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+    text-align: center;
+  }
+
+  .nav-link {
+    margin: 10px 0;
+    width: 100%;
+    padding: 2px;
+  }
+
+  .btn-link {
+    margin-top: 10px;
+  }
+}
+
 /* Página HOME - Conteúdo principal */
 
 .main-section {
@@ -119,7 +141,7 @@ body {
 
 @media (max-width: 767px) {
   .main-section > .container {
-    padding: calc(156px + 80px) 0;
+    padding: 104px 0;
   }
 }
 
